--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^7.0.3"
   },
   "type": "module",
-  "start": "node app.js"
+  "start": "node app.js",
+  "main": "index.js",
+  "version": "1.0.0",
+  "scripts": {
+    "start": "nodemon index.js"
+  }
 }
