--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "date-fns": "^2.29.3",
     "react": "^18.2.0",
     "react-date-range": "^1.4.0",
+    "react-datepicker": "^4.11.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
     "react-router-dom": "^6.10.0",
@@ -44,5 +45,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },"proxy":"http://localhost:8800/api"
+  },
+  "proxy": "http://localhost:8800/api"
 }
